--- a/css/app.css
+++ b/css/app.css
@@ -1,7 +1,12 @@
+html, body {
+  height: 100%;
+  margin: 0;
+}
+
 .box{
-    width: 720px;
-    height: 1280px;
-    border: 1px solid;
+    width: 100%;
+    height: 100%;
+    /*border: 1px solid;*/
 }  
 
 .slide-left.ng-enter,
@@ -17,11 +22,11 @@
   -o-transition: 0.5s ease-in-out ;
   transition: 0.5s ease-in-out ;
   position: absolute;
-  width: 720px;
+  width: 100%;
 }
 .slide-left.ng-enter {
   /*z-index: 100;*/
-  left: 720px;
+  left: 100%;
 }
 .slide-left.ng-enter.ng-enter-active {
   left: 0;
@@ -32,12 +37,12 @@
   left: 0;
 }
 .slide-left.ng-leave.ng-leave-active {
-  left: -720px;
+  left: -100%;
 }
 
 .slide-right.ng-enter {
  /* z-index: 100;*/
-  left: -720px;
+  left: -100%;
 }
 .slide-right.ng-enter.ng-enter-active {
   left: 0;
@@ -47,12 +52,12 @@
   left: 0;
 }
 .slide-right.ng-leave.ng-leave-active {
-  left: 720px;
+  left: 100%;
 }
 
 .slide-up.ng-enter {
   /*z-index: 100;*/
-  top: 1280px;
+  top: 100%;
 }
 .slide-up.ng-enter.ng-enter-active {
   top: 0;
@@ -63,12 +68,12 @@
   top: 0;
 }
 .slide-up.ng-leave.ng-leave-active {
-  top: -1280px;
+  top: -100%;
 }
 
 .slide-down.ng-enter {
   /*z-index: 100;*/
-  top: -1280px;
+  top: -100%;
 }
 .slide-down.ng-enter.ng-enter-active {
   top: 0;
@@ -79,5 +84,5 @@
   top: 0;
 }
 .slide-down.ng-leave.ng-leave-active {
-  top: 1280px;
+  top: 100%;
 }
